--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ pandas = "^1.5.2"
 scipy = "^1.10.0"
 scikit-learn = "^1.2.0"
 pydantic = "^1.10.4"
+sqlalchemy = "^1.4.46"
+fastapi = "^0.89.1"
+uvicorn = {extras = ["standard"], version = "^0.20.0"}
+asyncpg = "^0.27.0"
+alembic = "^1.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
