--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ fastapi = "^0.89.1"
 uvicorn = {extras = ["standard"], version = "^0.20.0"}
 asyncpg = "^0.27.0"
 alembic = "^1.9.1"
+passlib = "^1.7.4"
+pyjwt = "^2.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
