--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ passlib = "^1.7.4"
 pyjwt = "^2.6.0"
 requests = "^2.28.2"
 psycopg2 = "^2.9.5"
+redis = "^4.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
