--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,24 +8,21 @@ packages = [{include = "pool_search_assistant"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-pandas = "^1.5.2"
-scipy = "^1.10.0"
-scikit-learn = "^1.2.0"
-pydantic = "^1.10.4"
-sqlalchemy = "^1.4.46"
-fastapi = "^0.89.1"
-uvicorn = {extras = ["standard"], version = "^0.20.0"}
+alembic = "^1.9.2"
 asyncpg = "^0.27.0"
-alembic = "^1.9.1"
+fastapi = "^0.89.1"
+pandas = "^1.5.3"
 passlib = "^1.7.4"
 pyjwt = "^2.6.0"
-requests = "^2.28.2"
-psycopg2 = "^2.9.5"
 redis = "^4.4.2"
+requests = "^2.28.2"
+scikit-learn = "^1.2.0"
+uvicorn = "^0.20.0"
+pydantic = {extras = ["dotenv"], version = "^1.10.4"}
 
 
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.19.4"
+[tool.poetry.group.analysis.dependencies]
+ipykernel = {version = "^6.20.2", optional = true}
 
 [build-system]
 requires = ["poetry-core"]
