--- a/deploy/example.env
+++ b/deploy/example.env
@@ -1,7 +1,7 @@
 # Base
 PROJECT_NAME           = pool_search_assistant
 HOST                   = 0.0.0.0
-LOG_LEVEL              = DEBUG
+LOG_LEVEL              = debug
 DOCKER                 = false
 SECRET                 = choice
 
@@ -18,13 +18,13 @@ PASSWORD_ALGORITHM     = choice
 # Database
 POSTGRES_USER          = postgres
 POSTGRES_PASSWORD      = choice
-POSTGRES_HOST          = localhost
+POSTGRES_HOST          = db
 HOST_POSTGRES_PORT     = 5433
 POSTGRES_PORT          = 5432
 POSTGRES_DB            = pool_search_assistant
 
 # Redis
-REDIS_HOST             = localhost
+REDIS_HOST             = redis
 HOST_REDIS_PORT        = 6379
 REDIS_PORT             = 6379
 REDIS_DB               = 0
