--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,10 @@ pyjwt = "^2.6.0"
 redis = "^4.4.2"
 requests = "^2.28.2"
 scikit-learn = "^1.2.0"
-uvicorn = "^0.20.0"
 pydantic = {extras = ["dotenv"], version = "^1.10.4"}
+psycopg2 = "^2.9.5"
+gunicorn = "^20.1.0"
+uvicorn = "^0.20.0"
 
 
 [tool.poetry.group.analysis.dependencies]
