--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,15 @@ uvicorn = "^0.20.0"
 [tool.poetry.group.analysis.dependencies]
 ipykernel = {version = "^6.20.2", optional = true}
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+mypy = "^0.991"
+black = "^22.12.0"
+flake8-print = "^5.0.0"
+flake8-pyproject = "^1.2.2"
+types-redis = "^4.4.0.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
