fix docker compose

--- a/deploy/prod.docker-compose.yml
+++ b/deploy/prod.docker-compose.yml
@@ -23,11 +23,8 @@ services:
     depends_on:
       - db
       - redis
-    environment:
-      - POSTGRES_HOST=db
-      - REDIS_HOST=redis
     env_file:
-      - fileName
+      - .env
   
   redis:
     container_name: redis
